fix header jumping around when scrollbar was shown

--- a/src/assets/stylesheets/base/_typeset.scss
+++ b/src/assets/stylesheets/base/_typeset.scss
@@ -41,9 +41,11 @@ input {
 // Hack of the day to prevent jumping on scrollbar show/hide
 @media screen and (min-width: 960px) {
   html {
-    margin-left: calc(100vw - 100%);
-    margin-right: 0;
+    margin-right: calc(100% - 100vw);
     background-color: var(--color-background);
+}
+  body {
+    margin-right: calc(100vw - 100%);
   }
 }
 
