--- a/src/assets/stylesheets/layout/_header.scss
+++ b/src/assets/stylesheets/layout/_header.scss
@@ -26,7 +26,7 @@
 
 // Application header (stays always on top)
 .md-header {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
